// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterOpacity renders 0 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(0%);
  filter: opacity(0%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(0%);
  filter: opacity(0%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(0%);
  filter: opacity(0%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(0%);
  filter: opacity(0%);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders function 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(hasnot);
  filter: opacity(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(has);
  filter: opacity(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(hasnot);
  filter: opacity(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(has);
  filter: opacity(has);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(invalid.path.1);
  filter: opacity(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(invalid.path.1);
  filter: opacity(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(invalid.path.1);
  filter: opacity(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(invalid.path.1);
  filter: opacity(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders negative number 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(-5488100%);
  filter: opacity(-5488100%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(-5488100%);
  filter: opacity(-5488100%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(-4236500%);
  filter: opacity(-4236500%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(-4236500%);
  filter: opacity(-4236500%);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(July);
    filter: opacity(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(September);
    filter: opacity(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(July);
    filter: opacity(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(September);
    filter: opacity(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(May);
    filter: opacity(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(June);
    filter: opacity(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(April);
    filter: opacity(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(May);
    filter: opacity(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(June);
    filter: opacity(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: opacity(April);
    filter: opacity(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-filter: opacity(July);
    filter: opacity(July);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media January {
  .c0 {
    -webkit-filter: opacity(September);
    filter: opacity(September);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

@media June {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-filter: opacity(July);
    filter: opacity(July);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media January {
  .c0 {
    -webkit-filter: opacity(September);
    filter: opacity(September);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(November);
    filter: opacity(November);
  }
}

@media June {
  .c0 {
    -webkit-filter: opacity(August);
    filter: opacity(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: opacity(January);
    filter: opacity(January);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(December);
    filter: opacity(December);
  }
}

@media January {
  .c0 {
    -webkit-filter: opacity(April);
    filter: opacity(April);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(May);
    filter: opacity(May);
  }
}

@media June {
  .c0 {
    -webkit-filter: opacity(June);
    filter: opacity(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: opacity(January);
    filter: opacity(January);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(December);
    filter: opacity(December);
  }
}

@media January {
  .c0 {
    -webkit-filter: opacity(April);
    filter: opacity(April);
  }
}

@media April {
  .c0 {
    -webkit-filter: opacity(May);
    filter: opacity(May);
  }
}

@media June {
  .c0 {
    -webkit-filter: opacity(June);
    filter: opacity(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(54881%);
  filter: opacity(54881%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(54881%);
  filter: opacity(54881%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(42365%);
  filter: opacity(42365%);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(42365%);
  filter: opacity(42365%);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders string 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(July);
  filter: opacity(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(July);
  filter: opacity(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(June);
  filter: opacity(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(June);
  filter: opacity(June);
}

<div
    className="c0"
  />,
]
`;

exports[`filterOpacity renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: opacity(DarkSlateBlue);
  filter: opacity(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(DarkSlateBlue);
  filter: opacity(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(DarkSlateBlue);
  filter: opacity(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: opacity(DarkSlateBlue);
  filter: opacity(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
